--- a/application/src/templates/index.html
+++ b/application/src/templates/index.html
@@ -18,47 +18,35 @@
 
 </head>
 
-<body>
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="/">reset</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
+      <a class="navbar-brand" href="/">TOP</a>
     </div>
-
   </nav>
-
-
 
   <!-- Page Content -->
   <div class="container">
+  <div class="row">
 
-    <div class="row">
-
-      <!-- Search Widget -->
-      <div class="card my-4">
-        <h5 class="card-header">Search</h5>
-        <div class="card-body">
-          <form action = "/search" method = "POST">
-          <div class="input-group">
-            <input type="text" name="search" class="form-control" placeholder="Search for...">
-            <span class="input-group-btn">
-              <button class="btn btn-secondary" type="submit">Go!</button>
-            </span>
-          </div>
-          </form>
-        </div>
+  <!-- Search Widget -->
+  <div class="card my-4">
+    <h5 class="card-header">Search</h5>
+    <div class="card-body">
+      <form action = "/search" method = "POST">
+      <div class="input-group">
+        <input type="text" name="search" class="form-control" placeholder="Search for...">
+        <span class="input-group-btn">
+          <button class="btn btn-secondary" type="submit">Go!</button>
+        </span>
       </div>
-      <!-- Blog Entries Column -->
-      <div class="col-md-8">
+      </form>
+    </div>
+  </div>
+  <!-- Blog Entries Column -->
+  <div class="col-md-8">
+   <h1 class="my-4">遊戯王OCG MONSTER SUMMARY</h1>
 
-        <h1 class="my-4">遊戯王コンテンツ</h1>
+  {% block content %}
 
-        {% block content %}
-        <!-- ここにメインコンテンツを書く -->
-        {% endblock %}
-        
+  {% endblock %}
